[project]
name = "sovereign-guard"
version = "0.1.0"
description = "Enterprise Trade Compliance System"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit==1.28.1",
    "python-dotenv==1.0.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "openai==1.6.1",
    "requests==2.31.0",
    "plotly==5.18.0",
    "altair==5.1.2",
    "pydantic==2.5.0",
]
